--- a/sales.html
+++ b/sales.html
@@ -9,14 +9,20 @@
   <!-- <link href = "css folder/style.css" type = "text/css" rel ="stylesheet" /> -->
 </head>
 <body>
-  <h1> Salmon Cookies
+  <h1> This is the sales folder
 
   </h1>
   <main>
-    <a href="index.html">Link to Home Page</a>
+    <h2>
+      This is list of cookies per hour generated using random number of customers per hour
+    </h2>
+    <ul id="cookiesList">
+
+    </ul>
 
   </main>
   <footer>
+      <a href="index.html">Link to Home Page</a>
     <script src = "app.js"></script>
   </footer>
 </body>
