--- a/sales.html
+++ b/sales.html
@@ -14,6 +14,9 @@
   </h1>
   <main>
     <a href="index.html">Link to Home Page</a>
+    <ul id="cookiesList">
+      
+    </ul>
 
   </main>
   <footer>
