added styles image and fontstyles

--- a/sales.html
+++ b/sales.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <!-- <link href="css folder/reset.css" type = "text/css" rel ="stylesheet" />  -->
+  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
   <link href = "css folder/style.css" type = "text/css" rel ="stylesheet" />
 </head>
 <body>
