added more text styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </h1>
   <main>
     <!-- <img src="images/salmon.png" alt="Salmon logo" width="500em"; height="200em"/> -->
-    
+    <p class="space">
+      
+    </p>
   </main>
   <footer>
       <a href= "sales.html"> Go see the sales numbers </a>
