--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <p class="space">
       
     </p>
+    <div id="map">
+      <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=pike%20place%20market&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>Google Maps Generator by <a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style>
+    </div>
+    </div>
   </main>
   <footer>
       <a href= "sales.html"> Go see the sales numbers </a>
