--- a/sales.html
+++ b/sales.html
@@ -15,8 +15,22 @@
   </h1>
   <main>
     <div class="space">
-
     </div>
+            <div class="navbar">
+              <p>
+                Order 
+              </p>
+              <p>
+                Contact Info
+              </p>
+              <p>
+                Sales
+              </p>
+                <p>
+                    <a href= "index.html"> Home
+                    </a>
+                </p>
+            </div>
     <div class="list">
       <ul id="cookiesList">
 
@@ -28,7 +42,6 @@
 
   </main>
   <footer>
-      <a href="index.html">Link to Home Page</a>
     <script src = "app.js"></script>
   </footer>
 </body>
