added styling to the tables

--- a/sales.html
+++ b/sales.html
@@ -24,9 +24,15 @@
             </ul>
         </div>
         <div id="table">
+            <h2>
+                Table 1 shows the <em>hourly</em> cookie sales at each location
+            </h2>
 
         </div>
         <div id="tablePercent">
+            <h2>
+                Table 2 shows the percent customers at each hour for each shop
+            </h2>
 
         </div>
 
