--- a/index.html
+++ b/index.html
@@ -18,10 +18,21 @@
 
     </h1>
     <main>
-        <!-- <img src="images/salmon.png" alt="Salmon logo" width="500em"; height="200em"/> -->
         <p class="space">
 
         </p>
+        <h2> Forms and Events Demo </h2>
+            <form id="user-form">
+                <fieldset>
+                    <label>Enter Name Here:</label>
+                    <input id="inputElementName" type"text"     placeholder="name goes here...">
+                    <button value="submit">Submit</button>
+                    <label>Enter Age Here</label>
+                    <input id="inputElementAge" type"text" placeholder="age goes here...">
+                    <button value ="submit">Submit2</button>
+                </fieldset>
+            </form>
+
         <div id="map">
             <div class="mapouter">
                 <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=pike%20place%20market&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>Google Maps Generator
@@ -63,7 +74,7 @@
             </ul>
         </div>
 
-        <!-- <script src = "app.js"></script> -->
+        <script src = "app2.js"></script>
         <div class="icons">
             <!-- Add font awesome icons -->
             <a href="#" class="fa fa-facebook"></a>
