added more methods into constructor notation to make code DRY

--- a/index.html
+++ b/index.html
@@ -21,17 +21,6 @@
         <p class="space">
 
         </p>
-        <h2> Forms and Events Demo </h2>
-            <form id="user-form">
-                <fieldset>
-                    <label>Enter Name Here:</label>
-                    <input id="inputElementName" type"text"     placeholder="name goes here...">
-                    <button value="submit">Submit</button>
-                    <label>Enter Age Here</label>
-                    <input id="inputElementAge" type"text" placeholder="age goes here...">
-                    <button value ="submit">Submit2</button>
-                </fieldset>
-            </form>
 
         <div id="map">
             <div class="mapouter">
@@ -74,7 +63,7 @@
             </ul>
         </div>
 
-        <script src = "app2.js"></script>
+        <!-- <script src = "app2.js"></script> -->
         <div class="icons">
             <!-- Add font awesome icons -->
             <a href="#" class="fa fa-facebook"></a>
