--- a/sales.html
+++ b/sales.html
@@ -23,6 +23,19 @@
 
             </ul>
         </div>
+        <div id="form"></div>
+        <h2> Forms and Events Demo </h2>
+        <form id="user-form">
+            <fieldset>
+                <label>Enter Name Here:</label>
+                <input id="inputElementName" type"text"     placeholder="name goes here...">
+                <label>Enter Age Here</label>
+                <input id="inputElementAge" type"text" placeholder="age goes here...">
+                <button value ="submit">Submit2</button>
+            </fieldset>
+        </form>
+    </div>
+
         <div id="table">
             <h2>
                 Table 1 shows the <em>hourly</em> cookie sales at each location
