added basic structure of the form

--- a/sales.html
+++ b/sales.html
@@ -24,14 +24,34 @@
             </ul>
         </div>
         <div id="form"></div>
-        <h2> Forms and Events Demo </h2>
+        <h2> Information needed for your shop! </h2>
         <form id="user-form">
             <fieldset>
-                <label>Enter Name Here:</label>
-                <input id="inputElementName" type"text"     placeholder="name goes here...">
-                <label>Enter Age Here</label>
-                <input id="inputElementAge" type"text" placeholder="age goes here...">
-                <button value ="submit">Submit2</button>
+                <legend>
+                    Please fill it out!
+                </legend>
+                <label>
+                    Enter Location Name Here:
+                </label>
+                <input id="inputElementName" type"text"     placeholder="enter name here...">
+                <br />
+                <label>
+                    Min customers per hour:
+                </label>
+                <input id="inputElementMinCust" type"text" placeholder="enter number here...">
+                <br />
+                <label>
+                    Max customers per hour: 
+                </label>
+                <input id="inputElementMaxCust" type"text" placeholder="enter number here...">
+                <br />
+                <label>
+                    Average cookies per customer:
+                </label>
+                <input id="inputElementAvgCookies" type"text"
+                placeholder="enter number here...">
+                <br />
+                <input type ="submit" value="Submit" />
             </fieldset>
         </form>
     </div>
