added css styling to the submit form

--- a/sales.html
+++ b/sales.html
@@ -24,11 +24,11 @@
             </ul>
         </div>
         <div id="form"></div>
-        <h2> Information needed for your shop! </h2>
+        <!-- <h2> Enter details for your shop! </h2> -->
         <form id="user-form">
             <fieldset>
                 <legend>
-                    Please fill it out!
+                    Shop Details Here
                 </legend>
                 <label>
                     Enter Location Name Here:
