completed addition function and totals working

--- a/sales.html
+++ b/sales.html
@@ -28,26 +28,31 @@
         <form id="user-form">
             <fieldset>
                 <legend>
-                    Shop Details Here
+                    Enter Shop Details Here
                 </legend>
                 <label>
-                    Enter Location Name Here:
+                    Location Name:
                 </label>
+                <br />
+
                 <input id="inputElementName" type"text"     placeholder="enter name here...">
                 <br />
                 <label>
                     Min customers per hour:
                 </label>
+                <br />
                 <input id="inputElementMinCust" type"text" placeholder="enter number here...">
                 <br />
                 <label>
                     Max customers per hour: 
                 </label>
+                <br />
                 <input id="inputElementMaxCust" type"text" placeholder="enter number here...">
                 <br />
                 <label>
                     Average cookies per customer:
                 </label>
+                <br />
                 <input id="inputElementAvgCookies" type"text"
                 placeholder="enter number here...">
                 <br />
