added some styles to the form

--- a/sales.html
+++ b/sales.html
@@ -35,26 +35,26 @@
                 </label>
                 <br />
 
-                <input id="inputElementName" type"text"     placeholder="enter name here...">
+                <input id="inputElementName" type= "text"     placeholder="enter name here..." required minlength="2">
                 <br />
                 <label>
                     Min customers per hour:
                 </label>
                 <br />
-                <input id="inputElementMinCust" type"text" placeholder="enter number here...">
+                <input id="inputElementMinCust" type= "number" placeholder="enter number here..." required value= "1" min="1">
                 <br />
                 <label>
                     Max customers per hour: 
                 </label>
                 <br />
-                <input id="inputElementMaxCust" type"text" placeholder="enter number here...">
+                <input id="inputElementMaxCust" type= "number" placeholder="enter number here..." required value= "1" min="1">
                 <br />
                 <label>
                     Average cookies per customer:
                 </label>
                 <br />
-                <input id="inputElementAvgCookies" type"text"
-                placeholder="enter number here...">
+                <input id="inputElementAvgCookies" type= "text"
+                placeholder="enter number here..." required>
                 <br />
                 <input type ="submit" value="Submit" />
             </fieldset>
