--- a/sales.html
+++ b/sales.html
@@ -35,7 +35,7 @@
                 </label>
                 <br />
 
-                <input id="inputElementName" type= "text"     placeholder="enter name here..." required minlength="2">
+                <input id="inputElementName" type= "text"     placeholder="enter name here..." required minlength="2" maxlength="60">
                 <br />
                 <label>
                     Min customers per hour:
@@ -53,8 +53,8 @@
                     Average cookies per customer:
                 </label>
                 <br />
-                <input id="inputElementAvgCookies" type= "text"
-                placeholder="enter number here..." required>
+                <input id="inputElementAvgCookies" type= "number"
+                placeholder="enter number here..." required value="0.1" min="0.1" step="0.1">
                 <br />
                 <input type ="submit" value="Submit" />
             </fieldset>
