made changes to nav bar

--- a/index.html
+++ b/index.html
@@ -14,13 +14,28 @@
 </head>
 
 <body>
-    <h1> Salmon Cookies
+    <header>
+        <div class="space_over_header">
+        </div>
+            
+        <h1> Salmon Cookies
 
-    </h1>
+        </h1>
+        <span class="navbar">
+                <ul>
+                    <li><a href="sales.html">Sales</a>
+                    </li>
+                    <li><a href=" ">Order</a>
+                    </li>
+                    <li><a href=" ">Contact Info</a>
+                    </li>
+                </ul>
+        </span>    
+    </header>
     <main>
-        <p class="space">
+        <div class="space">
 
-        </p>
+        </div>
 
         <div id="map">
             <div class="mapouter">
@@ -52,7 +67,7 @@
           </h3>
         </p>
       </div> -->
-        <div class="navbar">
+        <!-- <div class="navbar">
             <ul>
                 <li><a href="sales.html">Sales</a>
                 </li>
@@ -61,7 +76,7 @@
                 <li><a href=" ">Contact Info</a>
                 </li>
             </ul>
-        </div>
+        </div> -->
 
         <!-- <script src = "app2.js"></script> -->
         <div class="icons">
