--- a/sales.html
+++ b/sales.html
@@ -9,12 +9,29 @@
     <link href="css folder/reset.css" type="text/css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link href="css folder/style.css" type="text/css" rel="stylesheet" />
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <h1> This is the sales folder
+    <header>
+        <div class="space_over_header">
+        </div>
+    
+        <h1> This is the sales folder
 
-    </h1>
+        </h1>
+        <span class="navbar">
+            <ul>
+                <li><a href=index.html>Home</a>
+                </li>
+                <li><a href="">Order</a>
+                </li>
+                <li><a href="">Contact Info</a>
+                </li>
+            </ul>
+        </span>
+    </header>
     <main>
         <div class="space">
         </div>
@@ -24,42 +41,41 @@
             </ul>
         </div>
         <div id="form"></div>
-        <!-- <h2> Enter details for your shop! </h2> -->
-        <form id="user-form">
-            <fieldset>
-                <legend>
+            <form id="user-form">
+                <fieldset>
+                    <legend>
                     Enter Shop Details Here
-                </legend>
-                <label>
+                    </legend>
+                    <label>
                     Location Name:
-                </label>
-                <br />
+                    </label>
+                    <br />
 
-                <input id="inputElementName" type= "text"     placeholder="enter name here..." required minlength="2" maxlength="60">
-                <br />
-                <label>
+                    <input id="inputElementName" type= "text"     placeholder="enter name here..." required minlength="2" maxlength="60">
+                    <br />
+                    <label>
                     Min customers per hour:
-                </label>
-                <br />
-                <input id="inputElementMinCust" type= "number" placeholder="enter number here..." required value= "1" min="1">
-                <br />
-                <label>
+                    </label>
+                    <br />
+                    <input id="inputElementMinCust" type= "number" placeholder="enter number here..." required value= "1" min="1">
+                    <br />
+                    <label>
                     Max customers per hour: 
-                </label>
-                <br />
-                <input id="inputElementMaxCust" type= "number" placeholder="enter number here..." required value= "1" min="1">
-                <br />
-                <label>
+                    </label>
+                    <br />
+                    <input id="inputElementMaxCust" type= "number" placeholder="enter number here..." required value= "1" min="1">
+                    <br />
+                    <label>
                     Average cookies per customer:
-                </label>
-                <br />
-                <input id="inputElementAvgCookies" type= "number"
-                placeholder="enter number here..." required value="0.1" min="0.1" step="0.1">
-                <br />
-                <input type ="submit" value="Submit" />
-            </fieldset>
-        </form>
-    </div>
+                    </label>
+                    <br />
+                    <input id="inputElementAvgCookies" type= "number"
+                    placeholder="enter number here..." required value="0.1" min="0.1" step="0.1">
+                    <br />
+                    <input type ="submit" value="Submit" />
+                </fieldset>
+            </form>
+        </div>
 
         <div id="table">
             <h2>
@@ -76,7 +92,7 @@
 
     </main>
     <footer>
-        <div class="navbar">
+        <!-- <div class="navbar">
             <ul>
                 <li><a href=index.html>Home</a>
                 </li>
@@ -85,7 +101,13 @@
                 <li><a href="">Contact Info</a>
                 </li>
             </ul>
+        </div> -->
+        <div class="icons">
+                <!-- Add font awesome icons -->
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
         </div>
+    
         <script src="app.js"></script>
     </footer>
 </body>
