changed nav bar

--- a/sales.html
+++ b/sales.html
@@ -21,6 +21,10 @@
         <h1> This is the sales folder
 
         </h1>
+    </header>
+    <main>
+        <div class="space">
+        </div>
         <span class="navbar">
             <ul>
                 <li><a href=index.html>Home</a>
@@ -31,16 +35,12 @@
                 </li>
             </ul>
         </span>
-    </header>
-    <main>
-        <div class="space">
-        </div>
         <div class="list">
             <ul id="cookiesList">
 
             </ul>
         </div>
-        <div id="form"></div>
+        <div id="form">
             <form id="user-form">
                 <fieldset>
                     <legend>
@@ -92,21 +92,6 @@
 
     </main>
     <footer>
-        <!-- <div class="navbar">
-            <ul>
-                <li><a href=index.html>Home</a>
-                </li>
-                <li><a href="">Order</a>
-                </li>
-                <li><a href="">Contact Info</a>
-                </li>
-            </ul>
-        </div> -->
-        <div class="icons">
-                <!-- Add font awesome icons -->
-                <a href="#" class="fa fa-facebook"></a>
-                <a href="#" class="fa fa-twitter"></a>
-        </div>
     
         <script src="app.js"></script>
     </footer>
