adjusted nav bar'

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
             </ul>
         </span>
 
-        <div id="map">
+        <div>
             <div class="mapouter">
                 <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=pike%20place%20market&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>Google Maps Generator
-                    by <a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div>
+                    by <a href="https://www.embedgooglemap.net">embedgooglemap.net</a>
+                </div>
                 <style>
                     .mapouter {
                         position: relative;
@@ -57,6 +58,14 @@
                         width: 600px;
                     }
                 </style>
+            </div>
+            <div>
+                <h3>
+                    About Us
+                </h3>
+                <p>
+                    Combining the best of Pacific Northwest to make salty sweet Salmon Cookies to satisfy everyone's taste buds.
+                </p>
             </div>
         </div>
     </main>
