--- a/sales.html
+++ b/sales.html
@@ -29,7 +29,7 @@
             <ul>
                 <li><a href=index.html>Home</a>
                 </li>
-                <li><a href="">Order</a>
+                <li><a href="store.html">Merchandice</a>
                 </li>
                 <li><a href="">Contact Info</a>
                 </li>
