--- a/store.html
+++ b/store.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="reset.css" type="text/css" rel= "stylesheet" />
-  <link href="style.css" type="text/css" rel="stylesheet" />
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link href="css folder/reset.css" type="text/css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <link href="css folder/style.css" type="text/css" rel="stylesheet" />
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
-  <header>
-    <div>
-      <nav>
-        <ul>
-          <li>
-            <img src="https://placehold.it/200x70/ddd" />
-          </li>
-          <li class="nav">
-            Nav Item 1
-          </li>
-          <li class="nav">
-            Nav Item 2
-          </li>
-          <li class="nav">
-            Nav Item 3
-          </li>
-          <li class="nav">
-            Nav Item 4
-          </li>   
-        </ul>
-      </nav>
-    </div>
-  </header>
+    <header>
+        <div class="space_over_header">
+        </div>
+            
+        <h1> Salmon Cookies
+
+        </h1>
+    </header>
+    <main>
+        <div class="space">
+
+        </div>
+
+        <span class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a>
+                </li>
+                <li><a href="sales.html">Sales</a>
+                </li>
+                <li><a href="">Contact Info</a>
+                </li>
+            </ul>
+        </span>
+
   <main>
     <div>
         <img src="https://placehold.it/960x450/ddd" />
