more css changes

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 Do you want to have great hair and great teeth, and don't really care why you have the exact amount of milk in the cups in front of you or that there is a fishy smell constantly around you... then Salmon cookies is the dessert you will <em>LOVE</em>...
             </figcaption>
         </figure>
-        <div>
-            <h3 id="merch" >Check out some of our merchandice today</h3>
+        <div id="merch">
+            <h3>Check out some of our merchandice today</h3>
             <img class="items" src="images/cutter.jpeg" alt=" Salmon style cookie cutter" width="200"/>
             <figcaption>cookie cutter</figcaption>
             <img class="items" src="images/frosted-cookie.jpg" alt=" Salmon shaped frosted cookie" width="200"/>
