stpre contact details

--- a/index.html
+++ b/index.html
@@ -64,11 +64,8 @@
                 <h3 id="contactInfo">
                     Contact details</br>
                 </h3>
-                <p>
-                    Address: 2323 Alaskan Way, Seattle </br>
-                    Hours: 7am - 8pm daily </br>
-                    Phone: DO-NOT-VISIT </br>
-                </p>
+                <ul id="address"> 
+                </ul>
             
         </div>
     </footer>
