--- a/index.html
+++ b/index.html
@@ -64,8 +64,38 @@
                 <h3 id="contactInfo">
                     Contact details</br>
                 </h3>
-                <ul id="address"> 
-                </ul>
+                <ul id="address">
+                        <li>
+                            Seattle Shop
+                            Address: 2323 Alaskan Way
+                            Hours: 7am - 8pm daily
+                            Phone: DO-NOT-VISIT
+                        </li> 
+                        <li>
+                                Tokyo Shop
+                                Address: 2323 Fisherman Way
+                                Hours: 7am - 8pm daily
+                                Phone: DO-NOT-VISIT
+                        </li> 
+                        <li>
+                                Dubai Shop
+                                Address: 6565 Market Street
+                                Hours: 7am - 8pm daily
+                                Phone: DO-NOT-VISIT
+                        </li>
+                        <li>
+                                Paris Shop
+                                Address: 201 NotreDam Way
+                                Hours: 7am - 8pm daily
+                                Phone: DO-NOT-VISIT
+                        </li>  
+                        <li>
+                                Lima Shop
+                                Address: 102 Julius Highway
+                                Hours: 7am - 8pm daily
+                                Phone: DO-NOT-VISIT
+                        </li>  
+                    </ul>
             
         </div>
     </footer>
