--- a/sales.html
+++ b/sales.html
@@ -25,7 +25,7 @@
         </div>
         <span class="navbar">
             <ul>
-                <li><a href=index.html>Home</a>
+                <li><a href="index.html">Home</a>
                 </li>
                 <li><a href="index.html">Merchandice</a>
                 </li>
@@ -94,12 +94,38 @@
             <h3 id="contactInfo">
                 Contact details</br>
             </h3>
-            <p>
-                Address: 2323 Alaskan Way, Seattle </br>
-                Hours: 7am - 8pm daily </br>
-                Phone: DO-NOT-VISIT </br>
-            </p>
-        
+            <ul id="address">
+                <li>
+                    Seattle Shop
+                    Address: 2323 Alaskan Way
+                    Hours: 7am - 8pm daily
+                    Phone: DO-NOT-VISIT
+                </li> 
+                <li>
+                        Tokyo Shop
+                        Address: 2323 Fisherman Way
+                        Hours: 7am - 8pm daily
+                        Phone: DO-NOT-VISIT
+                </li> 
+                <li>
+                        Dubai Shop
+                        Address: 6565 Market Street
+                        Hours: 7am - 8pm daily
+                        Phone: DO-NOT-VISIT
+                </li>
+                <li>
+                        Paris Shop
+                        Address: 201 NotreDam Way
+                        Hours: 7am - 8pm daily
+                        Phone: DO-NOT-VISIT
+                </li>  
+                <li>
+                        Lima Shop
+                        Address: 102 Julius Highway
+                        Hours: 7am - 8pm daily
+                        Phone: DO-NOT-VISIT
+                </li>  
+            </ul>
         </div>
 
     
