--- a/sales.html
+++ b/sales.html
@@ -55,20 +55,20 @@
                     Min customers per hour:
                     </label>
                     <br />
-                    <input id="inputElementMinCust" type= "number" placeholder="enter number here..." required value= "1" min="1">
+                    <input id="inputElementMinCust" type= "number" placeholder="enter number here..." min="1">
                     <br />
                     <label>
                     Max customers per hour: 
                     </label>
                     <br />
-                    <input id="inputElementMaxCust" type= "number" placeholder="enter number here..." required value= "1" min="1">
+                    <input id="inputElementMaxCust" type= "number" placeholder="enter number here..." min="1">
                     <br />
                     <label>
                     Average cookies per customer:
                     </label>
                     <br />
                     <input id="inputElementAvgCookies" type= "number"
-                    placeholder="enter number here..." required value="0.1" min="0.1" step="0.1">
+                    placeholder="enter number here..." min="0.1" step="0.1">
                     <br />
                     <input type ="submit" value="Submit" />
                 </fieldset>
